Mild performance optimization. The prior implementation was rather operation-hungry due to the ArrayList shifting all elements whenever .remove(0) is called.